unpackaged/main/default/objects/Opportunity_Product_Benefits__c/Opportunity_Product_Benefits__c.object-meta.xml
<CustomObject>
    <description>Custom object to track sponsorship opportunity benefits</description>
    <label>Opportunity Product Benefit</label>
    <nameField>
        <displayFormat>OPB{000000}</displayFormat>
        <label>Opportunity Product Benefits ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Product Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>