unpackaged/main/default/objects/Opportunity_Product_Benefits__c/fields/FS_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>FS_Additional_Information__c</fullName>
    <inlineHelpText>Any additional info/notes</inlineHelpText>
    <label>Additional Information</label>
    <type>TextArea</type>
</CustomField>