unpackaged/main/default/objects/Opportunity_Product_Benefits__c/fields/FS_Benefit_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Benefit_Name__c</fullName>
    <label>Benefit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>