unpackaged/main/default/objects/Opportunity_Product_Benefits__c/fields/FS_Benefit_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Benefit_Status__c</fullName>
    <inlineHelpText>fulfillment Status of the benefit/promise</inlineHelpText>
    <label>Benefit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>