unpackaged/main/default/objects/Opportunity_Product_Benefits__c/fields/FS_Description__c.field-meta.xml
<CustomField>
    <fullName>FS_Description__c</fullName>
    <inlineHelpText>Description of the benefit</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>