unpackaged/main/default/objects/Opportunity_Product_Benefits__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Opportunity tied to the benefit</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Product Benefits</relationshipLabel>
    <relationshipName>Opportunity_Product_Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>